# JC3248W535EN_ESP_IDF

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  set-up-macos.md
eez/: focus_st_dash.eez-project
eez/src/ui/: images.c  images.h  screens.c  screens.h  structs.h  ui.c  ui.h  ui_image_st_icon_150x64.c  vars.h
main/: CMakeLists.txt  board.h  project.c  project.h
main/bsp/: esp_bsp.c  esp_bsp.h
main/lvgl_port/: lv_port.c  lv_port.h
main/ui/: fonts.h  macros.c  macros.h  structs.h  ui.c  ui.h  ui_events.h
main/ui/font_src/: orbitron_30.c
main/ui/media_src/: st_icon_150x64.c
main/ui/screen/: dash_screen.c  main_screen.c  obd2_page1_stats_screen.c  screen.h  startup_screen.c
main/ui/widgets/: ex_value_indicator.c  ex_value_indicator.h
